# sphero_playground

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build_unix.sh  conanfile.txt  run_conan_install.sh
cmake/: FindThrift.cmake
examples/: CMakeLists.txt  curl_fetch.cpp  detect_face.hpp  display_image.cpp  edge.cpp  face_detect.cpp  webcam.cpp
examples/curl/: CMakeLists.txt  curl_fetch.cpp  curl_fetch_demo.cpp  curl_webcam_fetch.cpp  curl_webcam_fetch.hpp
examples/mqtt/: CMakeLists.txt  VL53L1X_change_address.py  qwiic_TitanX1_publisher.py  qwiic_VL53L1X_publisher.py  qwiic_publisher.py  qwiic_subscriber.cpp  qwiic_subscriber.py  sphero_publisher.py
examples/thrift/: CMakeLists.txt  ImageServiceHandler.cpp  ImageServiceHandler.hpp  server.cpp  service.thrift  thrift_client.cpp  thrift_server.cpp
examples/thrift/python/: python_client.py
examples/thrift/rpi_cam/: CMakeLists.txt  client_desktop.cpp  image_service.thrift
examples/thrift/rpi_cam/python/: server_rpi.py
examples/thrift/servos/: CMakeLists.txt  servo_client_test.cpp  servo_service.thrift
examples/thrift/servos/python/: servo_server_rpi.py
examples/thrift/sphero/: CMakeLists.txt  sphero_client_test.cpp  sphero_service.thrift
examples/thrift/sphero/python/: sphero_server.py
examples/udp/: CMakeLists.txt  client.cpp  server.cpp  udp_client.cpp  udp_server.cpp
